<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherBo</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_unavailable_message">Network is unavailable!</string>
    <string name="btn_7day">7 DAY</string>
    <string name="btn_hourly">HOURLY</string>
    <string name="title_activity_daily_forecast">DailyForecastActivity</string>
    <string name="no_data">There is no data to display.</string>
    <string name="title_activity_hourly_forecast">HourlyForecastActivity</string>

    <!-- Donate -->
    <string name="donate">Donate</string>
    <string name="donate_header">Please consider supporting further development by removing ad or donating to the developer. Thanks!</string>
    <string name="donate_paypal_title">PayPal</string>
    <string name="donate_paypal_description">Donate any amount with PayPal</string>
    <string name="donate_button">Donate</string>
    <string name="donate_in_app_title">Google Play</string>
    <string name="donate_in_app_description">Donate using your Google account</string>
    <string name="donate_in_app_spinner_text">Select a donation amount</string>
    <string-array name="donate_in_app_sku_array">
        <item>weatherbo.donations.removeads</item>
        <item>weatherbo.donations.removeads.smalldonation</item>
        <item>weatherbo.donations.removeads.largedonation</item>
    </string-array>
    <string name="donate_thank_you">Thank you for your donation!</string>
    <string name="btn_donate">Remove ADs</string>

    <string name="banner_ad_unit_id">ca-app-pub-4005336923636884/2056913053</string>

</resources>
