<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:ads="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/cool_beans"
            android:clipToPadding="false"
            tools:context=".ui.DonateActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical">

        <TextView
            android:padding="16dp"
            android:layout_columnSpan="2"
            android:layout_marginTop="16dp"
            android:text="@string/donate_header"
            android:textIsSelectable="false"
            android:textStyle="bold"/>

        <!--<TextView-->
        <!--style="@style/HeaderTextView"-->
        <!--android:layout_column="0"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:drawablePadding="8dp"-->
        <!--android:drawableStart="@drawable/ic_action_paypal"-->
        <!--android:text="@string/donate_paypal_title"-->
        <!--android:textIsSelectable="false"/>-->

        <!--<View-->
        <!--style="@style/HeaderSeparator"-->
        <!--android:layout_column="0"-->
        <!--android:layout_columnSpan="2"-->
        <!--android:layout_gravity="fill_horizontal"-->
        <!--android:layout_marginBottom="10dp"/>-->

        <!--<TextView-->
        <!--android:layout_columnSpan="2"-->
        <!--android:text="@string/donate_paypal_description"-->
        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
        <!--android:textIsSelectable="false"/>-->

        <!--<Button-->
        <!--android:id="@+id/paypal_button"-->
        <!--android:layout_column="1"-->
        <!--android:layout_gravity="end"-->
        <!--android:background="@color/ocean_green"-->
        <!--android:text="@string/donate_button"/>-->

        <LinearLayout
            android:id="@+id/in_app_layout"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/HeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_action_google_play"
                android:text="@string/donate_in_app_title"
                android:textIsSelectable="false"/>

            <View
                style="@style/HeaderSeparator"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/in_app_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_in_app_description"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/donate_in_app_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/donate_in_app_spinner_text"
                    tools:listitem="@android:layout/simple_spinner_dropdown_item"/>

                <Button
                    android:id="@+id/donate__in_app_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@color/ocean_green"
                    android:text="@string/donate_button"/>
            </LinearLayout>
        </LinearLayout>

    </GridLayout>

</ScrollView>